tests/compile_failures/classes/missing_fields.rs
use dioxus_sugar::classes;

#[classes(id)]
struct Props {
    name: String,
}

fn main() {}