tests/compile_failures/classes/missing_fields.stderr
error[E0609]: no field `id` on type `&Props`
 --> tests/compile_failures/classes/missing_fields.rs:3:11
  |
3 | #[classes(id)]
  |           ^^ unknown field
  |
  = note: available fields are: `name`
